--- a/src/button/style/index.less
+++ b/src/button/style/index.less
@@ -1,4 +1,4 @@
-.ea-button {
+.x-button {
   box-sizing: border-box;
   display: inline-block;
   padding: 12px 20px;
@@ -18,7 +18,7 @@
   appearance: none;
 }
 
-.ea-button.ea-button-primary {
+.x-button.x-button--primary {
   color: #fff;
   background-color: #409eff;
   border-color: #409eff;
